main/default/objects/Quick_Check_Answer__c/Quick_Check_Answer__c.object-meta.xml
<CustomObject>
    <description>Quick Check Answer</description>
    <label>Quick Check Answer</label>
    <nameField>
        <displayFormat>QCA{000000}</displayFormat>
        <label>Quick Check Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Check Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>