main/default/objects/Quick_Check_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Respondent&apos;s answer</description>
    <label>Answers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>