main/default/objects/Quick_Check_Answer__c/fields/Answer_Checking__c.field-meta.xml
<CustomField>
    <fullName>Answer_Checking__c</fullName>
    <description>Answer Checking</description>
    <label>Answer Checking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>