main/default/objects/Quick_Check_Answer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Quick_Check_Response_Number__r.Contact__r.Id, Quick_Check_Response_Number__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Quick_Check_Response_Number__r.Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>