main/default/objects/Quick_Check_Answer__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <formula>Quick_Check_Response_Number__r.Contact__r.Id</formula>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>