main/default/objects/Quick_Check_Answer__c/fields/isLatest__c.field-meta.xml
<CustomField>
    <fullName>isLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLatest</label>
    <type>Checkbox</type>
</CustomField>