main/default/objects/Quick_Check_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Question from Quick Check Question</description>
    <label>Question</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>