main/default/objects/Quick_Check_Answer__c/fields/Quick_Check__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check__c</fullName>
    <description>Links to Quick Check</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Quick_Check_Question_Number__r.Quick_Check__r.Id,  Quick_Check_Question_Number__r.Quick_Check__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Check</label>
    <type>Text</type>
</CustomField>