main/default/objects/Quick_Check_Answer__c/fields/Quick_Check_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check_Question_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quick Check Question Number</description>
    <label>Quick Check Question Number</label>
    <referenceTo>Quick_Check_Question__c</referenceTo>
    <relationshipLabel>Quick Check Answers</relationshipLabel>
    <relationshipName>Quick_Check_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>