main/default/objects/Quick_Check_Answer__c/fields/QuickCheckId__c.field-meta.xml
<CustomField>
    <fullName>QuickCheckId__c</fullName>
    <formula>Quick_Check_Question_Number__r.Quick_Check__r.Id</formula>
    <label>QuickCheckId</label>
    <type>Text</type>
</CustomField>