main/default/objects/Quick_Check_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Question__c</columns>
    <columns>Quick_Check__c</columns>
    <columns>Quick_Check_Question_Number__c</columns>
    <columns>Quick_Check_Response_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>